<resources>
    <string name="app_name">FinancialAuditingApp</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in </string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="profile">Profile</string>
    <string name="accounts">Accounts</string>
    <string name="profileName">My Profile</string>
    <string name="accountFragmentSettingsButtonText">Settings</string>
    <string name="date">date</string>
    <string name="title_activity_register">RegisterActivity</string>

    <string name="waitcountmoreBottomText">Positive Margin Pending Review</string>
    <string name="waitcountlessBottomText">Negative Margin Pending Review</string>
    <string name="nocountBottomText">Failed Audit</string>
    <string name="yescountBottomText">Passed Audit</string>
    <string name="title_activity_account_display">AccountDisplayActivity</string>

</resources>
